--- a/Attendance-System/Attendance-System.csproj
+++ b/Attendance-System/Attendance-System.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.2.0" />
     <PackageReference Include="EPPlus" Version="7.6.0" />
     <PackageReference Include="MaterialSkin" Version="0.2.1" />
